# qinbeans.net

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml  tailwind.config.ts  test
.github/workflows/: svelte.yml  sveltejs.yml
backend/: Cargo.toml  Rocket.toml  dockerfile  server.go  server_test.go  startup
backend/auth/: auth.go  auth_test.go
backend/log/: logger.go
backend/migrations/2023-01-11-044205_message/: up.sql
backend/migrations/2023-01-11-044215_blog/: down.sql  up.sql
backend/migrations/2023-01-11-044527_image/: down.sql  up.sql
backend/migrations/2023-01-11-064428_tag/: down.sql  up.sql
backend/migrations/2023-01-11-064436_blog_tag/: down.sql  up.sql
backend/model/: handler.go  post.go
backend/src/: main.rs  models.rs  request.rs  response.rs  schema.rs
backend/websockets/: handler.go  opcode.go  ws.go  ws_test.go
docs/admin/: admin_form.md  blog_form.md  template_request.json  template_response.json  template_response2.json
docs/client/: contact_form.md  template response.json
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  astro.config.mjs  bun.lockb  index.html  log.txt  package.json  pnpm-lock.yaml  release.env  svelte.config.js  tsconfig.json
frontend/.svelte-kit/: ambient.d.ts
frontend/.svelte-kit/adapter-bun/: index.js
frontend/public/: font.css  global.css  global.scss  main.css
frontend/src/: Admin.svelte  App.svelte  README.md  env.d.ts  main.ts
frontend/src/admin/: blog.svelte  home.svelte  login.svelte
frontend/src/wasm-lib/: Cargo.toml
frontend/src/wasm-lib/src/: lib.rs
src/: app.d.ts  app.html  hook.server.ts
src/routes/: +error.svelte  +layout.server.ts  +layout.svelte
static/: robots.txt
(+168 files in other folders)
