[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Fong <ryan@qinbeans.net>"]
license = "MIT"
description = "A library containing WASM bindings"
repository = "https://github.com/Qinbeans/qinbeans.net"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location"] }