[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Fong <ryan@qinbeans.net>"]
license = "MIT"
description = "A library containing WASM bindings"
repository = "https://github.com/Qinbeans/qinbeans.net"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-test = "0.3"
lazy_static = "1.4"
wasm-bindgen-futures = "0.4"
[dependencies.web-sys]
version = "0.3"
features = ["Window", "Location","Request","RequestInit","RequestMode","AbortSignal","AbortController"]